...
    const inputComponentData = (data) => {
        setInputData(data);
    }

    return (

        <View testID='translatorScreen' style={[{ flex: 1, paddingTop: insets.top }, isDarkThemeEnabled ? { backgroundColor: 'black' } : { backgroundColor: '#F3F1F7' }]} >

            {videoStatus ?
                <View style={inputStatus ? Styles.videoContainerDisable : Styles.videoContainerActivated}>
                    <AccountProvider>
                        <VideoPlayerComponent stringTranslated={inputData.trim()} animation={requestData} comStatus={true} isDarkThemeEnabled={isDarkThemeEnabled} mainComponent={true} focused={isFocused} />
                    </AccountProvider>
...
