...
                        tabBarIcon: ({ focused, color }) => (<MaterialIcons name="history" size={25} color= {focused? "#39B4C8": "#ccc"} />)})} />

                <Tab.Screen 
                    name='Profile'
                    children={() => <UserProfileNavigation change={changeThemee} setUserStatus={setUserStatus}/>}
                    options={({ navigation }) => ({
                        tabBarTestID: "settingsOpt",
                        title: "Ajustes",
                        tabBarActiveTintColor: '#39B4C8',
                        tabBarIcon: ({ focused, color }) => (<MaterialIcons name="settings" size={23} color= {focused? "#39B4C8": "#ccc"}/>)})} />
            </Tab.Navigator>
        </ThemeProvider> 
    )
...
