...

            {!isLoading? 
                <>
                    {inputText.length > 0 ? <TogglesInput keyboardToggle={keyboardDisable} submitInput={submitInputText} currentText={inputText}/>  : null}

                    <TextInput 
                        testID='textInput'
                        onFocus={keyboardActivated}
                        style = {[inputActivated? styles.inputContainerActivated : styles.inputContainer, isDarkThemeEnabled? {backgroundColor: '#181818', color: 'white'} : {backgroundColor: 'white', color: 'black'}]}
                        value = {inputText}
                        placeholder={isMicActivated? "Escuchando...": "Escribe tu texto" }         
                        textAlignVertical="top"
                        multiline
...
                <TouchableOpacity onPress={keyboardToggle}>
                    <Text style={styles.toggleText}>Cancelar</Text>
                </TouchableOpacity>
            </View>

            <View style={styles.inputSubmit}>
                <TouchableOpacity testID='translateButton' onPress={submitInput} disabled={!validInput}>
                    <Text style={[styles.toggleText, validInput? {color: '#007DF0'} : {color: '#A5A5A5'}]}>Traducir</Text>
                </TouchableOpacity>
            </View>
        </View>
    )
}
...
